--- a/.github/workflows/jenkins-hook.yml
+++ b/.github/workflows/jenkins-hook.yml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - name: Trigger Jenkins Job
         run: |
-          curl -X POST "https://${{ env.JENKINS_HOST }}/job/${{ env.JENKINS_JOB }}/build" \
+          curl -X POST "${{ env.JENKINS_HOST }}/job/${{ env.JENKINS_JOB }}/build" \
           --user "${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_TOKEN }}"
